@startuml
' ============================================================================
' Diagrama de Clases - UC-Analytics: Dashboard Analítico
' Sistema de Gestión de Ferretería
' Fecha: 23 de Noviembre, 2025
' ============================================================================

skinparam classAttributeIconSize 0
skinparam roundcorner 10

' ============================================================================
' CAPA DE PRESENTACIÓN (UI)
' ============================================================================

class "analytics.blade.php" as AnalyticsView <<Boundary>> {
  - selector_filtro_fecha: select
  - cards_kpis: div (4 tarjetas)
  - grafico_ventas: div (ApexCharts)
  - tabla_productos_vendidos: div
  - tabla_productos_calificados: div
  - seccion_stock_critico: div
  --
  + mostrarKPIs(kpis): HTML
  + renderizarGraficoVentas(chartData): JavaScript
  + mostrarTopProductos(productos): HTML
  + mostrarTopCalificados(productos): HTML
  + mostrarStockCritico(productos): HTML
  + cambiarFiltro(periodo): wire:model.live
}

' ============================================================================
' CAPA DE CONTROL
' ============================================================================

class Analytics <<Control, Livewire>> {
  + dateFilter: string = '30'
  + filterOptions: array
  --
  + getKpisProperty(): array
  + getSalesChartDataProperty(): array
  + getTopProductsProperty(): array
  + getTopRatedProductsProperty(): array
  + getCriticalStockProductsProperty(): array
  - getDateFrom(): Carbon
  + render(): View
}

' ============================================================================
' CAPA DE ENTIDAD
' ============================================================================

class Sale <<Entity>> {
  - id: bigint
  - invoice_number: string
  - customer_id: bigint
  - payment_id: bigint
  - status: string
  - sale_type: string
  - subtotal: decimal
  - discount: decimal
  - tax: decimal
  - total: decimal
  - currency: string
  - paid_at: timestamp
  - created_at: timestamp
  - updated_at: timestamp
  --
  + customer(): User
  + payment(): Payment
  + details(): Collection<SaleDetail>
}

class SaleUnperson <<Entity>> {
  - id: bigint
  - invoice_number: string
  - customer_id: bigint
  - payment_id: bigint
  - sale_id: bigint (nullable)
  - status: string
  - subtotal: decimal
  - discount: decimal
  - tax: decimal
  - total: decimal
  - notes: text
  - transaction_reference: string
  - payment_date: timestamp
  - created_at: timestamp
  - updated_at: timestamp
  --
  + customer(): User
  + payment(): Payment
  + sale(): Sale
  + saleDetails(): Collection<SaleDetail>
}

class SaleDetail <<Entity>> {
  - id: bigint
  - sale_id: bigint (nullable)
  - sale_unperson_id: bigint (nullable)
  - product_id: bigint
  - quantity: integer
  - unit_price: decimal
  - discount_percentage: decimal
  - subtotal: decimal
  --
  + sale(): Sale
  + saleUnperson(): SaleUnperson
  + product(): Product
}

class Entry <<Entity>> {
  - id: bigint
  - invoice_number: string
  - invoice_date: date
  - document_type: string
  - total: decimal
  - supplier_id: bigint
  - created_at: timestamp
  - updated_at: timestamp
  --
  + supplier(): Supplier
  + details(): Collection<EntryDetail>
}

class Product <<Entity>> {
  - id: bigint
  - name: string
  - description: text
  - image: string
  - purchase_price: decimal
  - sale_price: decimal
  - stock: integer
  - input: integer
  - output: integer
  - is_active: boolean
  - category_id: bigint
  - brand_id: bigint
  --
  + category(): Category
  + brand(): Brand
  + saleDetails(): Collection<SaleDetail>
  + reviews(): Collection<Review>
}

class Review <<Entity>> {
  - id: bigint
  - user_id: bigint
  - product_id: bigint
  - rating: integer (1-5)
  - comment: text
  - status: string
  - helpful_count: integer
  - created_at: timestamp
  - updated_at: timestamp
  --
  + user(): User
  + product(): Product
}

class ProductAlert <<Entity>> {
  - id: bigint
  - alert_type: string
  - threshold_value: decimal
  - message: text
  - priority: string
  - status: string
  - product_id: bigint
  - active: boolean
  --
  + product(): Product
}

class User <<Entity>> {
  - id: bigint
  - name: string
  - email: string
  - role: string
  --
  + sales(): Collection<Sale>
  + saleUnpersons(): Collection<SaleUnperson>
}

class Payment <<Entity>> {
  - id: bigint
  - payment_method: string
  - amount: decimal
  --
  + sales(): Collection<Sale>
  + saleUnpersons(): Collection<SaleUnperson>
}

' ============================================================================
' RELACIONES
' ============================================================================

AnalyticsView ..> Analytics : <<request>> wire:model.live
Analytics ..> AnalyticsView : <<render>> view('analytics')

Analytics --> Sale : <<consulta>> where('status', 'paid')
Analytics --> SaleUnperson : <<consulta>> where('status', 'paid')
Analytics --> SaleDetail : <<consulta>> whereHas('sale')
Analytics --> Entry : <<consulta>> where('invoice_date')
Analytics --> Product : <<consulta>> where('is_active')
Analytics --> Review : <<consulta>> where('status', 'approved')
Analytics --> ProductAlert : <<consulta>> where('alert_type')

User "1" --> "*" Sale : realiza ventas
User "1" --> "*" SaleUnperson : realiza ventas sin registro
Payment "1" --> "*" Sale : procesa pagos
Payment "1" --> "*" SaleUnperson : procesa pagos
Sale "1" --> "*" SaleDetail : tiene detalles
Sale "1" --> "*" SaleUnperson : puede tener ventas relacionadas
SaleUnperson "*" --> "1" Sale : pertenece a (opcional)
SaleUnperson "1" --> "*" SaleDetail : tiene detalles
SaleDetail "*" --> "1" Product : referencia a
Product "1" --> "*" Review : tiene reseñas
Product "1" --> "*" ProductAlert : tiene alertas

' ============================================================================
' NOTAS
' ============================================================================

note right of AnalyticsView
  **Vista Dashboard Analítico**

  **Componentes Principales:**
  1. Filtro de Fecha (7/30/365 días)
  2. 4 KPI Cards:
     - Ingresos Totales (verde)
     - Ticket Promedio (azul)
     - Stock Crítico (morado/rojo)
     - Egresos/Compras (naranja)
  3. Gráfico de Tendencia de Ventas
     - ApexCharts (área con gradiente)
     - Eje X: fechas/meses
     - Eje Y: montos en USD
  4. Top 5 Productos Más Vendidos
  5. Top 5 Productos Mejor Calificados
  6. Productos con Stock Crítico

  **Características:**
  - Tema oscuro (Tailwind CSS)
  - Reactivo con Livewire 3
  - wire:key para forzar recreación
  - MutationObserver para gráfico
  - Gradientes en cards

  **Ruta:**
  resources/views/livewire/reports/analytics.blade.php
end note

note left of Analytics
  **Componente Livewire Analytics**

  **getKpisProperty():**
    1. Calcula fecha inicio según filtro
    2. Ingresos Totales: sum(total) de:
       - sales (ventas registradas)
       - sale_unpersons (ventas sin registro)
       - Ambas con status='paid'
    3. Ticket Promedio: totalRevenue / totalSalesCount
    4. Stock Crítico: productos con stock <= 10
    5. Egresos: sum(total) de entradas/compras
    6. Retorna array con métricas redondeadas

  **getSalesChartDataProperty():**
    1. Detecta agrupación (mes para 365 días, día para resto)
    2. UNION ALL de sales y sale_unpersons
    3. AGRUPACIÓN POR MES (365 días):
       - TO_CHAR(created_at, 'YYYY-MM')
       - SUM(total) por período
       - Formatea: "Nov 2024", "Dec 2024", etc.
    4. AGRUPACIÓN POR DÍA (7/30 días):
       - DATE(created_at)
       - SUM(total) por período
       - Formatea: "17 Nov", "18 Nov", etc.
    5. Retorna: {categories: [], data: []}

  **getTopProductsProperty():**
    - SUM(quantity) agrupado por product_id
    - UNION ALL de sale_details:
      * WHERE sale_id IN (sales pagadas)
      * WHERE sale_unperson_id IN (sales unperson pagadas)
    - orderByDesc('total_quantity')
    - limit(5)
    - Eager loading: product (name, image)

  **getTopRatedProductsProperty():**
    - AVG(rating) agrupado por product_id
    - where('status', 'approved')
    - havingRaw('COUNT(*) >= 3')
    - orderByDesc('avg_rating')
    - limit(5)

  **getCriticalStockProductsProperty():**
    - where('stock', '<=', 10) OR stock = 0
    - orderBy('stock', 'asc')
    - limit(10)
    - Clasifica: 'sin_stock' / 'bajo_stock'
    - min_stock fijo en 10 unidades

  **getDateFrom():**
    - '7' => Carbon::now()->subDays(7)
    - '30' => Carbon::now()->subDays(30)
    - '365' => Carbon::now()->subYear()

  **Propiedades Computadas:**
  - $this->kpis
  - $this->salesChartData
  - $this->topProducts
  - $this->topRatedProducts
  - $this->criticalStockProducts

  **Ruta Web:**
  Route::get('/dashboard', Analytics::class)
end note

note bottom of Sale
  **Entidad Sale (Venta Registrada)**
  - Modelo Eloquent
  - Tabla: sales
  - Estados: paid, pending, cancelled
  - Tipos: pos (punto de venta), online
  - Relaciones:
    * belongsTo: Customer, Payment
    * hasMany: SaleDetail (sale_id)
  - Representa ventas con usuario registrado
  - Usado para calcular:
    * Ingresos totales (combinado con SaleUnperson)
    * Ticket promedio
    * Datos del gráfico de tendencias
  - Filtros aplicados:
    * where('status', 'paid')
    * where('created_at', '>=', $dateFrom)
end note

note bottom of SaleUnperson
  **Entidad SaleUnperson (Venta Sin Registro)**
  - Modelo Eloquent
  - Tabla: sale_unpersons
  - Estados: draft, pending_payment, paid, cancelled
  - Relaciones:
    * belongsTo: User (customer_id)
    * belongsTo: Payment (payment_id)
    * belongsTo: Sale (sale_id) - OPCIONAL
    * hasMany: SaleDetail (sale_unperson_id)
  - Representa ventas sin usuario registrado (invitados)
  - Puede estar asociada a una venta principal (Sale)
  - Campos adicionales:
    * notes: observaciones
    * transaction_reference: referencia de transacción
    * payment_date: fecha de pago
  - Se combina con Sale usando UNION ALL
    para métricas completas del dashboard
  - ⚠️ CORREGIDO: saleDetails() usa 'sale_unperson_id'
end note

note bottom of Product
  **Entidad Product**
  - Modelo Eloquent
  - Tabla: products
  - Campos clave:
    * stock: cantidad disponible
    * input: total ingresado
    * output: total vendido
    * is_active: boolean
  - Relaciones:
    * hasMany: SaleDetail, Review, ProductAlert
    * belongsTo: Category, Brand
  - Stock Crítico:
    * stock <= 10: bajo stock
    * stock = 0: sin stock
  - Observador desactivado en seeders
    para evitar conflictos de auditoría
end note

note bottom of Review
  **Entidad Review (Reseña)**
  - Modelo Eloquent
  - Tabla: reviews
  - rating: 1-5 estrellas
  - Estados: approved, pending, rejected
  - Usado para ranking de productos
  - Filtro: MIN 3 reseñas aprobadas
  - Cálculo: AVG(rating)
end note

note top of Entry
  **Entidad Entry (Compra/Ingreso)**
  - Modelo Eloquent
  - Tabla: entries
  - Representa compras a proveedores
  - document_type: FACTURA, NOTA, etc.
  - Usado para KPI de Egresos/Compras
  - Filtro: invoice_date >= $dateFrom
  - Suma: total de todas las entradas
end note

@enduml
